# rknn_model_zoo

./: .gitignore  README.md  begin.sh  build-linux.sh  linux_python.sh  scaling_frequency.sh
datasets/new_data/: dataset_outdoor.txt  output.txt
examples/yolov8/cpp/: CMakeLists.txt  main.cc  postprocess.cc  yolov8.cc  yolov8.h
examples/yolov8/cpp/rknpu2/: yolov8.cc
examples/yolov8/model/: coco_80_labels_list.txt
examples/yolov8/python/: colorchange.py  convert.py  export_rknn.data  export_rknn.quantization.cfg  mixing_accuracy1.py  mixing_accuracy2.py  yolov8.py
utils/: image_utils.c
